(react) fixed margins on mobile

--- a/src/react_practice_projects/BudgetTracker/components/CategoriesBreakdown.module.css
+++ b/src/react_practice_projects/BudgetTracker/components/CategoriesBreakdown.module.css
@@ -46,5 +46,6 @@ td {
 @media (max-width: 799px) {
   .container {
     flex-direction: column;
+    margin: 1rem 0;
   }
 }
