--- a/src/react_practice_projects/BudgetTracker/components/TransactionsTable.module.css
+++ b/src/react_practice_projects/BudgetTracker/components/TransactionsTable.module.css
@@ -67,6 +67,6 @@ th.colAmount,
 
 @media (max-width: 799px) {
   .table {
-    margin-left: 2.2rem;
+    margin: 1rem 1rem;
   }
 }
